--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,13 @@
+apply plugin: 'android-sdk-manager'
 apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 20
-    buildToolsVersion "20.0.0"
+    buildToolsVersion '20.0.0'
 
     defaultConfig {
         applicationId "com.laquysoft.androidweatherapp"
-        minSdkVersion 9
+        minSdkVersion 11
         targetSdkVersion 20
         versionCode 1
         versionName "1.0"
@@ -17,10 +18,18 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+
 }
 
+
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:20.0.0'
     compile 'com.android.support:support-v4:20.0.0'
+    compile 'com.squareup.dagger:dagger:1.2.1'
+    provided 'com.squareup.dagger:dagger-compiler:1.2.1'
+    compile 'com.squareup.retrofit:retrofit:1.6.1'
+    compile fileTree(dir: 'libs', include: ['*.jar', '*.aar'])
 }
+
+
