--- a/build.gradle
+++ b/build.gradle
@@ -2,18 +2,18 @@
 
 buildscript {
     repositories {
-        jcenter()
+        mavenCentral()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:0.12.2'
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath 'com.jakewharton.sdkmanager:gradle-plugin:0.12.0'
     }
 }
+
 
 allprojects {
     repositories {
-        jcenter()
+        mavenCentral()
     }
 }
+
