--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,8 @@ dependencies {
 
     compile 'com.nineoldandroids:library:2.4.0+'
 
+    compile 'com.squareup.picasso:picasso:2.3.4'
+
     compile 'com.squareup.dagger:dagger:1.2.1'
     provided 'com.squareup.dagger:dagger-compiler:1.2.1'
     compile 'com.squareup.retrofit:retrofit:1.6.1'
