--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
 
     defaultConfig {
         applicationId "com.laquysoft.androidweatherapp"
-        minSdkVersion 11
+        minSdkVersion 14
         targetSdkVersion 20
         versionCode 1
         versionName "1.0"
@@ -38,6 +38,9 @@ dependencies {
     compile 'com.squareup.dagger:dagger:1.2.1'
     provided 'com.squareup.dagger:dagger-compiler:1.2.1'
     compile 'com.squareup.retrofit:retrofit:1.6.1'
+
+    compile 'com.melnykov:floatingactionbutton:1.0.2'
+
     compile fileTree(dir: 'libs', include: ['*.jar', '*.aar'])
 }
 
