--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,8 @@ dependencies {
 
     compile 'com.melnykov:floatingactionbutton:1.0.2'
 
+    compile 'com.github.chrisbanes.actionbarpulltorefresh:library:+'
+
     compile fileTree(dir: 'libs', include: ['*.jar', '*.aar'])
 }
 
