--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.laquysoft.androidweatherapp" >
+    package="com.laquysoft.androidweatherapp">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -9,18 +9,17 @@
         android:name=".App"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/Theme.Weatherapp" >
+        android:theme="@style/Theme.Weatherapp">
         <activity
             android:name=".WeatherAppMainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
 
-            <service android:name="com.laquysoft.androidweatherapp.WeatherUpdateService" >
-            </service>
+            <service android:name="com.laquysoft.androidweatherapp.WeatherUpdateService"></service>
 
         </activity>
     </application>
